@@ -1,8 +1,42 @@
+Certainly! Here's a generic and readable Jira story description that anyone (developers, QA, product owners) can understand:
 
-tasks.withType(JavaExec).configureEach {
-	jvmArgs += [
-			"--add-exports", "java.base/sun.util.calendar=ALL-UNNAMED",
-            "--add-exports", "java.base/sun.nio.ch=ALL-UNNAMED",
-			"--add-exports", "java.base/sun.security.action=ALL-UNNAMED"
-	]
-}
+
+---
+
+📌 Story Title:
+
+Set up Apache Spark local environment for application development
+
+
+---
+
+📝 Story Description:
+
+Set up and integrate Apache Spark in local mode (local[*]) on a Windows development environment.
+This setup will allow the team to run and test Spark-based data processing logic directly within the Spring Boot application, without requiring a full Spark cluster.
+
+The integration should support Java 21 and be compatible with the project's existing Gradle build system.
+
+
+---
+
+✅ Acceptance Criteria:
+
+Spark is configured to run in local mode using local[*].
+
+Required dependencies are added and verified via Gradle.
+
+A simple Spark job runs successfully within the Spring Boot project.
+
+The setup works on Windows with Java 21.
+
+Logging is properly configured for Spark output.
+
+Setup steps and usage instructions are documented for the team.
+
+
+
+---
+
+Let me know if you want this reformatted for a sub-task, or if you need a README snippet as part of the documentation deliverable.
+
